# clash-nyanpasu

./: README.md  package.json
backend/: Cargo.toml
backend/tauri/: Cargo.toml  tauri.conf.json
backend/tauri/overrides/: nightly.conf.json
backend/tauri/src/: main.rs
backend/tauri/src/core/: updater.rs
backend/tauri/src/core/clash/: api.rs
backend/tauri/src/utils/: help.rs
backend/tauri/src/utils/init/: logging.rs
locales/: zh.json
manifest/: version.json
scripts/: check.ts
scripts/utils/: env.ts
src/components/setting/mods/: misc-viewer.tsx
src/locales/: en.json  zh.json
src/pages/: settings.tsx
src/services/: api.ts
